<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="@drawable/other">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/iv_rtn"
            android:layout_width="30dp"
            android:layout_height="45dp"
            android:adjustViewBounds="true"
            android:onClick="onRtn"
            android:src="@drawable/ic_back_arrow" />

    </RelativeLayout>

    <DigitalClock
        android:id="@+id/dClock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="40dp"
        android:textColor="@drawable/blue"
        android:layout_gravity="center_horizontal"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/text1"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:text="@string/str_title3"
                android:textSize="30dp"
                android:paddingTop="5dp"
                android:paddingLeft="0dp"
                android:layout_marginTop="25dp"
                android:layout_marginLeft="30dp"
                android:textColor="@drawable/black">
            </TextView>
            <Button
                android:id="@+id/mButton1"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:text="@string/str_button1"
                android:textColor="@drawable/black"
                android:textSize="22dp"
                android:layout_marginTop="25dp"
                android:layout_marginLeft="30dp"
                >
            </Button>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/setTime1"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:text="@string/str_default"
                android:textColor="@drawable/red"
                android:textSize="25dp"
                android:paddingTop="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="30dp"

                >
            </TextView>
            <Button
                android:id="@+id/mButton2"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:text="@string/str_button2"
                android:textColor="@drawable/black"
                android:textSize="22dp"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="30dp"
                >
            </Button>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/text5"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:text="@string/str_title4"
                android:textSize="30dp"
                android:paddingTop="5dp"
                android:paddingLeft="0dp"
                android:layout_marginTop="25dp"
                android:layout_marginLeft="30dp"
                android:textColor="@drawable/black"
                >
            </TextView>
            <Button
                android:id="@+id/mButton5"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:text="@string/str_button1"
                android:textColor="@drawable/black"
                android:textSize="22dp"
                android:layout_marginTop="25dp"
                android:layout_marginLeft="30dp"
                >
            </Button>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="750dp"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/setTime5"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:text="@string/str_default"
                android:textColor="@drawable/red"
                android:textSize="25dp"
                android:paddingTop="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="30dp"
                >
            </TextView>
            <Button
                android:id="@+id/mButton6"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:text="@string/str_button2"
                android:textColor="@drawable/black"
                android:textSize="22dp"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="30dp"

                >
            </Button>


        </LinearLayout>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/text2"
                android:layout_width="180dp"
                android:layout_height="50dp"
                android:text="@string/str_title2"
                android:textSize="25dp"
                android:textColor="@drawable/black"
                android:paddingTop="5dp"
                android:paddingLeft="0dp"
                android:layout_marginTop="25dp"
                android:layout_marginLeft="30dp"

                >
            </TextView>
            <Button
                android:id="@+id/mButton3"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:text="@string/str_button1"
                android:textColor="@drawable/black"
                android:textSize="22dp"
                android:layout_marginTop="25dp"
                >
            </Button>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/setTime2"
                android:layout_width="180dp"
                android:layout_height="200dp"
                android:text="@string/str_default"
                android:textColor="@drawable/red"
                android:textSize="20dp"
                android:paddingTop="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="30dp"
                >
            </TextView>
            <Button
                android:id="@+id/mButton4"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:text="@string/str_button2"
                android:textColor="@drawable/black"
                android:textSize="22dp"
                android:layout_marginTop="10dp"
                >
            </Button>

        </LinearLayout>
    </LinearLayout>

</LinearLayout>